Fixes/improvements for PySNT